--- a/src/components/Cover/Cover.css
+++ b/src/components/Cover/Cover.css
@@ -7,3 +7,8 @@
   box-shadow: 0px 0px 10px rgba(33, 33, 33, 0.3);
   max-width: 350px;
 }
+
+.Cover__temp {
+  background: #333;
+  border-radius: 3px;
+}
