--- a/src/views/Room/Room.scss
+++ b/src/views/Room/Room.scss
@@ -1,1 +1,8 @@
-
+.Room {
+  display: flex;
+  flex-direction: column;
+  margin: 120px auto 0;
+  width: 70vw;
+  position: relative;
+  z-index: 10;
+}
