--- a/src/components/Track/Track.css
+++ b/src/components/Track/Track.css
@@ -1,10 +1,11 @@
 .Track {
   align-items: center;
+  color: #f0f0f0;
   display: flex;
   transition: opacity 300ms ease-in-out;
   opacity: 1; }
   .Track:not(:last-child) {
-    margin-bottom: 10px; }
+    margin-bottom: 20px; }
 
 .Track__pending {
   opacity: 0.3; }
@@ -12,3 +13,14 @@
 .Track__content {
   flex: 1;
   margin-left: 10px; }
+
+.Track__artist {
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 5px; }
+
+.Track__name {
+  font-size: 13px; }
+
+.Track__duration {
+  color: #666666; }
