--- a/src/components/Cover/Cover.scss
+++ b/src/components/Cover/Cover.scss
@@ -1,11 +1,14 @@
 /* ==================================================================
    Album cover
    ================================================================== */
+
 .Cover {
   border-radius: 3px;
   box-shadow: 0px 0px 10px rgba(33, 33, 33, 0.3);
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 .Cover__temp {
   background: #333;
-  border-radius: 3px; }
+  border-radius: 3px;
+}
