--- a/src/components/Rooms/Rooms.scss
+++ b/src/components/Rooms/Rooms.scss
@@ -1,1 +1,33 @@
+.Rooms__room {
+  &:not(:last-child) {
+    margin-bottom: 5px;
+  }
+}
 
+.Rooms__button {
+  appearance: none;
+  background-color: #2d3339;
+  border: 0;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  transition: background-color 150ms ease-in-out, opacity 200ms ease-in-out;
+  width: 100%;
+
+  &:hover {
+    background-color: #363d45;
+  }
+
+  &:active,
+  &:focus {
+    background-color: #fcc169;
+    outline: none;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
