--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-body {
+html, body {
+  background-color: #24292e;
+  font-family: 'Roboto', Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
