--- a/src/views/Room/Room.css
+++ b/src/views/Room/Room.css
@@ -1,7 +1,20 @@
 .Room {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-column-gap: 30px;
   margin: 120px auto 0;
-  width: 70vw;
+  width: 80vw;
   position: relative;
   z-index: 10; }
+
+.Room__overlay {
+  background: rgba(36, 41, 46, 0.95);
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0; }
+
+.Room__content {
+  display: grid;
+  grid-row-gap: 30px; }
