--- a/src/views/Start/Start.scss
+++ b/src/views/Start/Start.scss
@@ -1,1 +1,50 @@
+.Start {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+}
 
+.Start__content {
+  background: #fff;
+  border-radius: 3px;
+  display: flex;
+}
+
+.Start__title {
+  align-items: center;
+  background: #fcc169;
+  border-radius: 3px 0 0 3px;
+  color: #fff;
+  display: flex;
+  font-size: 48px;
+  padding: 80px;
+}
+
+.Start__rooms {
+  padding: 40px;
+}
+
+.Start__separator {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 1px;
+  border: 0;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.Input {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 100%;
+
+  &:focus {
+    outline-color: #fcc169;
+    outline-offset: 2px;
+    outline-style: solid;
+    outline-width: 2px;
+  }
+}
