--- a/src/components/Queue/Queue.scss
+++ b/src/components/Queue/Queue.scss
@@ -1,4 +1,8 @@
 .Queue {
-  list-style: none;
-  padding: 0;
+  height: 60vh;
+  overflow: auto;
+}
+
+.Queue > .Track:not(:last-child) {
+  margin-bottom: 30px;
 }
