--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -1,6 +1,21 @@
 .Users {
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
   margin-top: 30px;
+}
+
+.Users__user {
+  align-items: center;
+  background-color: rgba(102, 140, 255, 0.08);
+  border-radius: 4px;
+  display: flex;
+  padding: 10px 20px;
+
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.Users__email {
+  color: #666;
+  flex: 1;
+  margin-left: 20px;
 }
