--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html, body {
-  background-color: #24292e;
+  background-color: #fff;
+  color: #333;
   font-family: 'Roboto', Helvetica, sans-serif;
   margin: 0;
   padding: 0;
