--- a/src/views/Room/Room.scss
+++ b/src/views/Room/Room.scss
@@ -1,7 +1,8 @@
 .Room {
+  align-items: flex-start;
   display: grid;
-  grid-template-columns: 300px 1fr;
-  grid-column-gap: 30px;
+  grid-template-columns: 300px 1fr 300px;
+  grid-column-gap: 60px;
   margin: 120px auto 0;
   width: 80vw;
   position: relative;
@@ -17,7 +18,16 @@
   top: 0;
 }
 
-.Room__content {
-  display: grid;
-  grid-row-gap: 30px;
+.Room__title {
+  margin-bottom: 40px;
+}
+
+.Room__now-playing {
+  align-items: center;
+  display: flex;
+  margin-top: 40px;
+}
+
+.Room__now-playing-track {
+  flex: 1;
 }
