--- a/src/components/Queue/Queue.css
+++ b/src/components/Queue/Queue.css
@@ -4,3 +4,10 @@
 
 .Queue > .Track:not(:last-child) {
   margin-bottom: 30px; }
+
+.EmptyState {
+  background: #fafafa;
+  border-radius: 4px;
+  color: #999;
+  padding: 40px;
+  text-align: center; }
