--- a/src/components/Cover/Cover.css
+++ b/src/components/Cover/Cover.css
@@ -25,5 +25,22 @@
   transform: scale(0.7); }
 
 .Cover__temp {
-  background: #333;
-  border-radius: 3px; }
+  background: #ccc;
+  border-radius: 4px; }
+
+.Position {
+  height: 310px;
+  left: -5px;
+  position: absolute;
+  top: -5px;
+  width: 310px; }
+
+.shape {
+  stroke-dasharray: 1500;
+  stroke-dashoffset: 1500;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 5px;
+  fill: transparent;
+  stroke: rgba(255, 134, 0, 0.4);
+  transition: stroke-dashoffset 100ms ease-in-out; }
