--- a/src/components/Track/Track.scss
+++ b/src/components/Track/Track.scss
@@ -13,8 +13,42 @@
   }
 }
 
-.Track__pending {
+.Track.Track__pending {
   opacity: 0.3;
+
+  .Track__artist {
+    animation: 1.5s pending alternate-reverse infinite;
+    background: #333;
+    border-radius: 2px;
+    height: 21px;
+    transform-origin: 0;
+    width: 80px;
+  }
+
+  .Track__name {
+    animation: 2s pending alternate-reverse infinite;
+    background: #999;
+    border-radius: 2px;
+    height: 19px;
+    transform-origin: 0;
+    width: 200px;
+  }
+
+  .Track__duration {
+    background: #ccc;
+    border-radius: 2px;
+    height: 16px;
+    width: 30px;
+  }
+}
+
+@keyframes pending {
+  from {
+    transform: scaleX(0);
+  }
+  to {
+    transform: scaleX(1);
+  }
 }
 
 .Track__content {
