--- a/src/components/Users/Users.scss
+++ b/src/components/Users/Users.scss
@@ -18,4 +18,11 @@
   color: #666;
   flex: 1;
   margin-left: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.Users__lastPlay {
+  font-size: 12px;
 }
