Changed font colors

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html, body {
   background-color: #fff;
-  color: #333;
+  color: #AFAFC7;
   font-family: 'Roboto', Helvetica, sans-serif;
   margin: 0;
   padding: 0;
