feat: now playing and user for track

--- a/src/components/Cover/Cover.css
+++ b/src/components/Cover/Cover.css
@@ -6,9 +6,7 @@
 
 .Cover__image {
   max-width: 100%;
-  position: relative;
-  vertical-align: top;
-  z-index: 2; }
+  vertical-align: top; }
 
 .Cover__shadow {
   bottom: -25px;
